tests/compile_fail/v3_iface_missing_method.iron
interface Cmp {
    readonly func cmp(other: Int) -> Int
}

patch object Int implements Cmp {
}

func main() {}
